fix(css): adjust scrollbar thumb color

--- a/src/index.css
+++ b/src/index.css
@@ -669,9 +669,13 @@ a.button {
 
 .figure.is-code > .figure-body > pre::-webkit-scrollbar-thumb {
   background-clip: padding-box;
-  background-color: var(--gray-6);
+  background-color: var(--gray-5);
   border: 2px solid transparent;
   border-radius: var(--basic-border-radius);
+}
+
+.figure.is-code > .figure-body > pre::-webkit-scrollbar-thumb:hover {
+  background-color: var(--gray-6);
 }
 
 .figure.is-code > .figure-body > pre > code {
